--- a/ClownCollege/Views/Courses/Create.cshtml
+++ b/ClownCollege/Views/Courses/Create.cshtml
@@ -5,13 +5,31 @@
 @model ClownCollege.Models.Course
 
 <h4>Add a new course</h4>
-@using (Html.BeginForm())
-{
-  @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name)
-
-  @Html.LabelFor(model => model.CourseNumber)
-  @Html.TextBoxFor(model => model.CourseNumber)
-  <input type="submit" value="Add new course" />
-}
+<div class="row">
+  <div class="col-md-4">
+    <div class="card">
+      <form id="student-form">
+        @using (Html.BeginForm())
+        {
+          @Html.LabelFor(model => model.Name)
+          <br>
+          @Html.TextBoxFor(model => model.Name)
+          <br>
+          @Html.LabelFor(model => model.CourseNumber)
+          <br>
+          @Html.TextBoxFor(model => model.CourseNumber)
+          <br>
+          @Html.Label("Select Department")
+          <br>
+          @Html.DropDownList("DepartmentId")
+          <br>
+          <input type="submit" value="Add new course" />
+        }
+      </form>
+    </div>
+  </div>
+  <div class="col-md-8">
+    <img src="/../../img/clown-group.jpg" width="500px" />
+  </div>
+</div>
 <p>@Html.ActionLink("Show all courses", "Index")</p>
