--- a/ClownCollege/Views/Courses/Edit.cshtml
+++ b/ClownCollege/Views/Courses/Edit.cshtml
@@ -18,6 +18,9 @@
   @Html.LabelFor(model => model.CourseNumber)
   @Html.EditorFor(model => model.CourseNumber)
 
+  @Html.Label("Select department")
+  @Html.DropDownList("DepartmentId")
+
   <input type="submit" value="Save" />
 }
 <p>@Html.ActionLink("Back to list", "Index")</p>
