--- a/ClownCollege/Views/Shared/_Layout.cshtml
+++ b/ClownCollege/Views/Shared/_Layout.cshtml
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="~/css/styles.css">
   </head>
   <body>
+    <div class="container">
     @RenderBody()
+    </div>
     @await Html.PartialAsync("Footer")
   </body>
 </html>
