--- a/ClownCollege/Views/Students/Create.cshtml
+++ b/ClownCollege/Views/Students/Create.cshtml
@@ -5,18 +5,35 @@
 @model ClownCollege.Models.Student
 
 <h4>Add a new Student</h4>
-
-@using (Html.BeginForm())
-{
-  @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name)
-
-  @Html.LabelFor(model => model.EnrollmentDate)
-  @Html.EditorFor(model => model.EnrollmentDate)
-
-  @Html.Label("Select course")
-  @Html.DropDownList("CourseId")
-
-  <input type="submit" value="Add new student" class="btn btn-default" />
-}
+<div class="row">
+  <div class="col-md-4">
+    <div class="card">
+      <form id="student-form">
+        @using (Html.BeginForm())
+        {
+          @Html.LabelFor(model => model.Name)
+          <br>
+          @Html.TextBoxFor(model => model.Name)
+          <br>
+          @Html.LabelFor(model => model.EnrollmentDate)
+          <br>
+          @Html.EditorFor(model => model.EnrollmentDate)
+          <br>
+          @Html.Label("Select course")
+          <br>
+          @Html.DropDownList("CourseId")
+          <br>
+          @Html.Label("Select Major")
+          <br>
+          @Html.DropDownList("DepartmentId")
+          <br>
+          <input type="submit" value="Add new student" />
+        }
+      </form>
+    </div>
+  </div>
+  <div class="col-md-8">
+    <img src="/../../img/clown-grads.jpg" width="500px" />
+  </div>
+</div>
 <p>@Html.ActionLink("Show all students", "Index")</p>
