Add a couple more things
Co-authored-by: Erica Marroquin <ericamarroquin03@gmail.com>
Co-authored-by: chansen1395 <chansen13@georgefox.edu>

--- a/ClownCollege/Views/Students/Edit.cshtml
+++ b/ClownCollege/Views/Students/Edit.cshtml
@@ -18,12 +18,12 @@
   @Html.LabelFor(model => model.EnrollmentDate)
   @Html.EditorFor(model => model.EnrollmentDate)
   <br>
-  @* @Html.Label("Select course")
+  @Html.Label("Select course")
   @Html.DropDownList("CourseId")
   <br>
   @Html.Label("Select department")
   @Html.DropDownList("DepartmentId")
-  <br> *@
+  <br>
   <input type="submit" value="Save" />
 }
 <hr>
